# mnemebrain-sdk

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml  pylint.yml  release.yml
docs/: api-reference.md  getting-started.md  proof-the-claim.md
examples/proof_the_claim/: 1_download_data.py  2_load_brain.py  3_evaluate.py  requirements.txt
src/mnemebrain/: __init__.py  client.py  models.py  v4.py
tests/: test_client.py  test_models.py  test_v4_clients.py
