[project]
name = "mnemebrain"
version = "0.1.0"
description = "Python SDK for MnemeBrain — biological belief memory for LLM agents"
readme = "README.md"
authors = [
    { name = "iam-dev", email = "affiliaps@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]
experiment = [
    "ollama>=0.4",
    "datasets>=3.0",
    "pandas>=2.0",
    "tqdm>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemebrain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
