[project]
name = "mnemebrain"
version = "1.0.0a2"
description = "Python SDK for MnemeBrain — Give your AI a real brain. Agents today store text. MnemeBrain stores beliefs with evidence, confidence, provenance, and revision logic."
readme = "README.md"
license = "MIT"
authors = [
    { name = "mnemebrain", email = "hello@mnemebrain.ai" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.9",
]
experiment = [
    "ollama>=0.4",
    "datasets>=3.0",
    "pandas>=2.0",
    "tqdm>=4.0",
]

[project.urls]
Homepage = "https://github.com/mnemebrain/mnemebrain-sdk"
Repository = "https://github.com/mnemebrain/mnemebrain-sdk"
Issues = "https://github.com/mnemebrain/mnemebrain-sdk/issues"
Changelog = "https://github.com/mnemebrain/mnemebrain-sdk/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemebrain"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
